--- a/src/pages/User/login/index.less
+++ b/src/pages/User/login/index.less
@@ -1,5 +1,13 @@
 @import '~antd/es/style/themes/default.less';
 
+.wrapper {
+  width: 328px;
+  margin: 0 auto;
+}
+.subBtn {
+  width: 100%;
+}
+
 .main {
   width: 328px;
   margin: 0 auto;
